flux/apps/base/pod-gateway/app/network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-openvpn
  namespace: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEntities:
        - world
    - toPorts:
        - ports:
            - port: "1197"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-cluster-dns
  namespace: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-vxlan
  namespace: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
        - matchLabels:
            app.kubernetes.io/name: overseerr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: radarr-uhd
        - matchLabels:
            app.kubernetes.io/name: readarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr-uhd
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
        - matchLabels:
            app.kubernetes.io/name: overseerr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: radarr-uhd
        - matchLabels:
            app.kubernetes.io/name: readarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr-uhd
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
